--- a/provision/gcp/single-node-cluster.yml
+++ b/provision/gcp/single-node-cluster.yml
@@ -1,7 +1,7 @@
 
 resources:
 - type: compute.v1.instance
-  name: single-node-rudl-01
+  name: single-node-rudl-02
   properties:
     zone: us-central1-f
     machineType: https://www.googleapis.com/compute/v1/projects/talpa-backend/zones/us-central1-f/machineTypes/n1-standard-1
@@ -11,7 +11,7 @@ resources:
       boot: true
       autoDelete: true
       initializeParams:
-        sourceImage: https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/family/debian-9
+        sourceImage: https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
     networkInterfaces:
     - network: https://www.googleapis.com/compute/v1/projects/talpa-backend/global/networks/default
       # Access Config required to give the instance a public IP address
@@ -22,5 +22,8 @@ resources:
       items:
         - key: startup-script
           value: |
-            #!/bin/bash
+            #! /bin/bash
+            set -ex
             apt-get update && apt-get install -y docker.io curl
+            curl -o /tmp/startup.sh "https://raw.githubusercontent.com/infracamp/rudl/master/cluster-builder/start-single-node-cluster.sh" && chmod 700 /tmp/startup.sh
+            /tmp/startup.sh
